[package]
name = "etf-matcher-vector-config-loader"
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
version = "0.3.0"
edition = "2021"
repository = "https://github.com/jzombie/rust-etf-matcher-vector-config-loader"
description = "Download and parse ETF Matcher ticker vector configurations."
license = "MIT"

[dependencies]
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking"] }

[dev-dependencies]
doc-comment = "0.3.3"
